--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.1",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
